--- a/vocabspa-war/src/main/webapp/stylesheets/main.css
+++ b/vocabspa-war/src/main/webapp/stylesheets/main.css
@@ -13,3 +13,12 @@
     display: block;
     margin: 5px;
 }
+
+td {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
