--- a/vocabspa-war/src/main/webapp/css/main.css
+++ b/vocabspa-war/src/main/webapp/css/main.css
@@ -14,11 +14,27 @@
     margin: 5px;
 }
 
-td {
+.addonLinks {
+    width: 27.4%;
+    min-height: 25px;
+    float: left;
+    background-color: transparent;
+    border: 1px solid #c8dadb;
+    border-radius: 6px;
+    box-shadow: 0 0 2px #5c595b;
+    margin: 6px;
+    padding: 6px;
+}
+
+body, td {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+table tr {
+    cursor: hand;
 }
